# nxemu

./: .gitmodules  nxemu.sln
src/network/: CMakeLists.txt  precompiled_headers.h
src/nxemu-core/: CMakeLists.txt  app_init.cpp  app_init.h  logging.cpp  logging.h  notification.h  nxemu-core.vcxproj  nxemu-core.vcxproj.filters  version.h.in
src/nxemu-core/machine/: switch_system.cpp  switch_system.h
src/nxemu-core/modules/: cpu_module.cpp  cpu_module.h  loader_module.cpp  loader_module.h  module_base.cpp  module_base.h  module_list.cpp  module_notification.cpp  module_notification.h  module_settings.cpp  module_settings.h  modules.cpp  modules.h  operating_system_module.cpp  operating_system_module.h  system_modules.cpp  system_modules.h  video_module.cpp  video_module.h
src/nxemu-core/settings/: core_settings.cpp  core_settings.h  identifiers.h  settings.cpp  settings.h
src/nxemu-cpu/: CMakeLists.txt  arm_dynarmic.cpp  arm_dynarmic.h  arm_dynarmic_32.cpp  arm_dynarmic_32.h  arm_dynarmic_64.cpp  arm_dynarmic_64.h  cpu_manager.cpp  cpu_manager.h  dynarmic_cp15.cpp  dynarmic_cp15.h  exclusive_monitor_interface.cpp  exclusive_monitor_interface.h  nxemu-cpu.cpp  nxemu-cpu.vcxproj  nxemu-cpu.vcxproj.filters  version.h.in
src/nxemu-cpu/dynarmic/backend/arm64/: a32_address_space.cpp  a64_address_space.cpp  a64_interface.cpp  emit_arm64_vector_floating_point.cpp  exclusive_monitor.cpp
src/nxemu-cpu/dynarmic/backend/x64/: a64_interface.cpp  exception_handler_windows.cpp  exclusive_monitor.cpp
src/nxemu-cpu/dynarmic/common/: math_util.cpp
src/nxemu-cpu/dynarmic/interface/: exclusive_monitor.h  halt_reason.h
src/nxemu-cpu/dynarmic/interface/A64/: a64.h
src/nxemu-loader/: CMakeLists.txt  nxemu-loader.cpp  nxemu-loader.vcxproj  nxemu-loader.vcxproj.filters  rom_info.cpp  rom_info.h  system_loader.cpp  system_loader.h  version.h.in
src/nxemu-loader/core/: core.cpp  core.h  memory.h
src/nxemu-loader/core/file_sys/: bis_factory.cpp  bis_factory.h  card_image.cpp  card_image.h  common_funcs.h  content_archive.cpp  content_archive.h  control_metadata.cpp  control_metadata.h  filesystem.cpp  filesystem.h  fs_save_data_types.h  fsmitm_romfsbuild.cpp  fsmitm_romfsbuild.h  ips_layer.cpp  nca_metadata.cpp  nca_metadata.h  partition_filesystem.cpp  partition_filesystem.h  patch_manager.cpp  patch_manager.h  program_metadata.cpp  program_metadata.h  registered_cache.cpp  registered_cache.h  romfs_factory.cpp  romfs_factory.h  save_data_controller.cpp  save_data_controller.h  savedata_factory.cpp  savedata_factory.h  sdmc_factory.cpp  sdmc_factory.h  submission_package.cpp  submission_package.h  xts_archive.cpp  xts_archive.h
src/nxemu-loader/core/file_sys/fssystem/: fs_i_storage.h  fs_types.h  fssystem_aes_ctr_counter_extended_storage.cpp  fssystem_aes_ctr_counter_extended_storage.h  fssystem_aes_ctr_storage.h  fssystem_alignment_matching_storage.h  fssystem_alignment_matching_storage_impl.cpp  fssystem_bucket_tree.h  fssystem_compressed_storage.h  fssystem_compression_common.h  fssystem_compression_configuration.cpp  fssystem_hierarchical_integrity_verification_storage.h  fssystem_hierarchical_sha256_storage.cpp  fssystem_integrity_verification_storage.cpp  fssystem_nca_file_system_driver.cpp  fssystem_nca_file_system_driver.h  fssystem_nca_header.h  fssystem_nca_reader.cpp  fssystem_pooled_buffer.cpp  fssystem_pooled_buffer.h
src/nxemu-loader/core/file_sys/system_archive/: shared_font.cpp  system_archive.cpp  system_archive.h  system_version.cpp
src/nxemu-loader/core/file_sys/vfs/: vfs_concat.cpp  vfs_concat.h  vfs_ivirtualdirectory.cpp  vfs_ivirtualfile.h  (+6 more)
src/nxemu-loader/core/loader/: deconstructed_rom_directory.cpp  deconstructed_rom_directory.h  loader.cpp  loader.h  nca.cpp  nca.h  nro.cpp  nro.h  nso.cpp  nso.h  nsp.cpp  nsp.h  xci.cpp  xci.h
src/nxemu-os/: CMakeLists.txt  emu_thread.cpp  emu_thread.h  nxemu-os.cpp  nxemu-os.vcxproj  nxemu-os.vcxproj.filters  os_manager.cpp  os_manager.h  os_settings.cpp  os_settings.h  os_settings_identifiers.h  version.h.in
src/nxemu-os/applets/: applet.h  cabinet.cpp  cabinet.h  controller.cpp  controller.h  error.cpp  error.h  general.cpp  general.h  mii_edit.cpp  mii_edit.h  profile_select.cpp  profile_select.h  software_keyboard.cpp  software_keyboard.h  web_browser.cpp  web_browser.h
src/nxemu-os/core/: core.cpp  core.h  core_timing.h  cpu_manager.cpp  cpu_manager.h  gpu_dirty_memory_manager.h  hardware_properties.h  memory.cpp  memory.h  perf_stats.h  reporter.cpp
src/nxemu-os/core/arm/: arm_interface.h  cpu_module.cpp  cpu_module.h  debug.cpp  debug.h
src/nxemu-os/core/debugger/: debugger.h
src/nxemu-os/core/file_sys/: filesystem_interfaces.h  fs_directory.h  fs_save_data_types.h
src/nxemu-os/core/memory/: cheat_engine.cpp
src/nxemu-video/: CMakeLists.txt  nxemu-video.cpp  nxemu-video.vcxproj  render_window.cpp  render_window.h  version.h.in  video_manager.cpp  video_manager.h  video_settings.cpp  video_settings_identifiers.h
src/yuzu_audio_core/: CMakeLists.txt  audio_core.cpp  audio_in_manager.cpp
src/yuzu_audio_core/device/: device_session.cpp
src/yuzu_audio_core/renderer/: system.cpp
src/yuzu_audio_core/renderer/upsampler/: upsampler_info.cpp
src/yuzu_audio_core/sink/: sink_stream.cpp
src/yuzu_common/: CMakeLists.txt  fiber.cpp  guest_memory.h  hardware_properties.h  input.h  multi_level_page_table.cpp  param_package.cpp  param_package.h  settings.cpp  settings.h  settings_enums.h  settings_input.cpp  settings_input.h  string_util.cpp  time_zone.cpp  yuzu_common.vcxproj  yuzu_common.vcxproj.filters
src/yuzu_common/android/: android_common.cpp  android_common.h  id_cache.cpp  id_cache.h  java_bridge.cpp  java_bridge.h  jni_android.cpp  jni_android.h
src/yuzu_common/android/applets/: software_keyboard.cpp  software_keyboard.h
src/yuzu_common/fs/: file.cpp  filesystem_interfaces.cpp  filesystem_interfaces.h  fs.h  fs_android.cpp  fs_android.h  fs_paths.h  path_util.cpp  path_util.h
src/yuzu_common/logging/: backend.cpp  backend.h  filter.cpp  filter.h  log.h  log_entry.h  text_formatter.cpp
(+413 files in other folders)
